--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-root {
+:root {
   --color-lightest: #fff4e6;
   --color-light: #ffe8cc;
   --color-medium: #ffa94d;
@@ -34,7 +34,7 @@ body {
 }
 
 .button {
-  background-color: #ffa94d;
+  background-color: var(--color-medium);
   color: #343a40;
   padding: 0.8rem 1.2rem;
   border: none;
